--- a/index.css
+++ b/index.css
@@ -8,6 +8,12 @@ body{
 
   body{
     color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 300px;
+    font-size: 30px;
   }
   
 
@@ -40,5 +46,7 @@ body{
     width: 100%;
     height: 100%;
     z-index: -1;
-    animation: fadeIn .5s linear;
+    animation: fadeIn 2s linear;
   }
+
+ 
